# rio-tiler-pds

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  404.html  AUTHORS.txt  CHANGES.md  CHANGES.txt  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml  deploy_mkdocs.yml
API/cbers/: index.html
API/landsat/: index.html
API/landsat-c2/: index.html
API/modis/: index.html
API/sentinel/: index.html
contributing/: index.html
docs/: mkdocs.yml  usage.md
docs/API/: baseclasses.md  modis.md  sentinel.md
docs/src/API/: cbers.md  landsat-c2.md  landsat.md
docs/src/usage/: landsat-c2.md  overview.md  sentinel.md
docs/usage/: cbers.md  landsat-c2.md  landsat.md  modis.md  overview.md  sentinel.md
release-notes/: index.html
rio_tiler_pds/: __init__.py  cbers.py  errors.py  landsat8.py  reader.py  sentinel2.py  utils.py
rio_tiler_pds/cbers/: __init__.py  awspds_cbers.py  utils.py
rio_tiler_pds/cbers/aws/: __init__.py  cbers4.py
rio_tiler_pds/copernicus/: __init__.py
rio_tiler_pds/copernicus/aws/: __init__.py  dem.py
rio_tiler_pds/landsat/: __init__.py  awspds_landsat8.py  utils.py
rio_tiler_pds/landsat/aws/: __init__.py  landsat8.py  landsat_collection2.py
rio_tiler_pds/modis/: __init__.py  modland_grid.py  utils.py
rio_tiler_pds/modis/aws/: __init__.py  modis_astraea.py  modis_pds.py
rio_tiler_pds/sentinel/: __init__.py  awspds_sentinel1.py  awspds_sentinel2.py  utils.py
rio_tiler_pds/sentinel/aws/: __init__.py  sentinel1.py  sentinel2.py
search/: search_index.json
tests/: test_cbers.py  test_copernicus_dem.py  test_landsat.py  test_landsat_c2.py  test_modis.py  test_modis_astraea.py  test_sentinel1.py  test_sentinel2.py
tests/fixtures/astraea-opendata/MYD13A1.006/30/10/2020153/: MYD13A1.A2020153.h30v10.006.2020170024036_BR_B06.TIF  MYD13A1.A2020153.h30v10.006.2020170024036_CDOY_B11.TIF  MYD13A1.A2020153.h30v10.006.2020170024036_EVI_B02.TIF  MYD13A1.A2020153.h30v10.006.2020170024036_MIRR_B07.TIF  MYD13A1.A2020153.h30v10.006.2020170024036_NDVI_B01.TIF  MYD13A1.A2020153.h30v10.006.2020170024036_NIRR_B05.TIF  MYD13A1.A2020153.h30v10.006.2020170024036_PR_B12.TIF  MYD13A1.A2020153.h30v10.006.2020170024036_RAA_B10.TIF  MYD13A1.A2020153.h30v10.006.2020170024036_RR_B04.TIF  MYD13A1.A2020153.h30v10.006.2020170024036_SZA_B09.TIF  MYD13A1.A2020153.h30v10.006.2020170024036_VIQ_B03.TIF  MYD13A1.A2020153.h30v10.006.2020170024036_VZA_B08.TIF
tests/fixtures/copernicus-dem-30m/Copernicus_DSM_COG_10_N00_00_E006_00_DEM/: Copernicus_DSM_COG_10_N00_00_E006_00_DEM.tif
tests/fixtures/copernicus-dem-90m/Copernicus_DSM_COG_30_S90_00_W164_00_DEM/: Copernicus_DSM_COG_30_S90_00_W164_00_DEM.tif
tests/fixtures/modis-pds/MCD43A4.006/21/11/2017006/: MCD43A4.A2017006.h21v11.006.2017018074804_B01.TIF  MCD43A4.A2017006.h21v11.006.2017018074804_B01qa.TIF  MCD43A4.A2017006.h21v11.006.2017018074804_B02.TIF  MCD43A4.A2017006.h21v11.006.2017018074804_B02qa.TIF  MCD43A4.A2017006.h21v11.006.2017018074804_B03.TIF  MCD43A4.A2017006.h21v11.006.2017018074804_B03qa.TIF  MCD43A4.A2017006.h21v11.006.2017018074804_B04.TIF  MCD43A4.A2017006.h21v11.006.2017018074804_B04qa.TIF  MCD43A4.A2017006.h21v11.006.2017018074804_B05.TIF  MCD43A4.A2017006.h21v11.006.2017018074804_B05qa.TIF  MCD43A4.A2017006.h21v11.006.2017018074804_B06.TIF  MCD43A4.A2017006.h21v11.006.2017018074804_B06qa.TIF  (+2 more)
tests/fixtures/sentinel-cogs/sentinel-s2-l2a-cogs/2020/S2A_29RKH_20200219_0_L2A/: AOT.tif  B01.tif  B03.tif  B04.tif  L2A_PVI.tif  S2A_29RKH_20200219_0_L2A.json  SCL.tif  WVP.tif
tests/fixtures/usgs-landsat/: README.md
usage/cbers/: index.html
usage/landsat/: index.html
usage/landsat-c2/: index.html
usage/modis/: index.html
usage/overview/: index.html
usage/sentinel/: index.html
(+50 files in other folders)
